# decies-platform

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  start-delete-bd.bat  start-local.bat
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py  script.py.mako
backend/alembic/_historical/: ddeec7e44e7d_init_models.py.disabled
backend/alembic/versions/: 0001_baseline.py  18617bb11e18_merge_games_table_branch.py  26dccb19549f_recommendation_context_and_catalog_fk.py  2f1c7f3b0b0a_add_recommendation_outcomes.py  31ad4590449b_add_llm_pipeline_models.py  39dfe007d819_add_session_feedback.py  3da11a9b14de_add_content_ingestion_models.py  3f5f2c9e9b71_content_upload_processing_status.py  4374b8842427_add_simple_learning_events.py  4f8a9c2b5d3e_add_microconcepts_activity_sessions_.py  6053b2dd2b53_add_e5_item_validation.py  6a2c2e6c0a12_add_cloze_item_type.py  6d2f0c3c1a7b_merge_heads_reports_and_simple_events.py  749cf271a66c_add_e3_mapping.py  83c6f7c7c0b9_add_recommendations_tables.py  8fd02f1678c7_ensure_match_item_type_label.py  9a31fa56887f_add_match_item_type.py  9c1c0d8a2f0d_add_tutor_reports.py  a1b2c3d4e5f6_add_game_code_to_llm_runs.py  b3cfe90abd0c_add_recommendation_catalog.py  d842d76c7e38_recommendation_versioning_fields.py  e2941b3dd56a_initial_schema_uuids.py  e88f5a4c0762_llm_runs_traceability_fields.py  e8dd5bdddbb8_add_real_grades_tables.py  f7c3d55b6bf7_add_games_table.py  fee3346a2bfe_add_recommendations_tables_v2.py
backend/app/: __init__.py  main.py  tasks.py
backend/app/core/: config.py  db.py  deps.py  llm_versioning.py  queue.py  security.py  versioning.py
backend/app/models/: activity.py  content.py  events.py  game.py  grade.py  item.py  knowledge.py  llm_run.py  metric.py  microconcept.py  recommendation.py  recommendation_catalog.py  report.py  role.py  student.py  subject.py  term.py  topic.py  tutor.py  user.py
backend/app/pipelines/: processing.py
backend/app/routers/: activity.py  admin.py  catalog.py  content.py  grades.py  metrics.py  microconcepts.py  recommendations.py  reports.py
backend/app/schemas/: activity.py  admin.py  (+11 more)
backend/scripts/: generate_openapi.py
backend/tests/: test_activity.py  test_admin_rbac.py  test_async_queue_health.py  test_auth_me.py  test_catalog_students.py  test_catalog_subjects.py  test_catalog_topics.py  test_content.py  test_item_review.py  test_llm_pipeline.py  test_llm_schema_contracts.py  test_mastery.py  test_metrics.py  test_microconcepts.py  test_openapi_contract.py  test_real_grades.py  test_recommendation_outcomes.py  test_recommendations.py  test_reports.py  test_smoke.py  test_sprint0.py
(+127 files in other folders)
